--- a/themes/site-theme/layouts/404.html
+++ b/themes/site-theme/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "header" }}{{ partial "header.html" . }}{{ end }}
 {{ define "main" }}
   <article class="py-56 text-center">
-    <h1 class="font-open text-3xl md:text-6xl font-light text-white pb-10 leading-none">404 Page Not Found</h1>
+    <h1 class="font-open text-3xl md:text-6xl font-light text-black pb-10 leading-none">404 Page Not Found</h1>
     <a href="/" class="bg-color-1B5785 border-4 border-color-042947 hover:bg-color-042947 font-teko text-2xl text-white mt-3 mx-auto pt-2 pb-1 px-4 hover:cursor-pointer">Return to Home Page</a>
   </article>
 {{ end }}
